# mtasa-module-python

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build-docker.sh  entrypoint.sh  library.h  run-tests.sh  setup.sh
include/ModulePython/: Exception.h  PythonModule.h  PythonVm.h  commands.h  pythonModule.h  utilities.h
include/ModulePython/commands/: debug.h  globalLuaVm.h  isPythonInited.h  pythonCall.h  pythonCallback.h  pythonCheck.h  pythonDestroy.h  pythonInit.h  pythonTriggerEvent.h
include/ModulePython/modules/: Modules.h  MtasaCore.h
python/: main.py  requirements.txt  something.py
python-scripts/: main.py
python/mtasa/: core.py  event.py
src/: Exception.cpp  PythonModule.cpp  PythonVm.cpp  main.cpp  utilities.cpp
src/commands/: debug.cpp  globalLuaVm.cpp  isPythonInited.cpp  pythonCall.cpp  pythonCallback.cpp  pythonCheck.cpp  pythonDestroy.cpp  pythonInit.cpp  pythonTriggerEvent.cpp
src/modules/: Modules.cpp  MtasaCore.cpp
tests/: main.cpp
tests/environment/: Dockerfile  entrypoint.sh
tests/environment/deathmatch/: .gitignore  acl.xml  mtaserver.conf
tests/environment/deathmatch/python/: .gitignore  README.md  call_functions.py  element_test.py  main.py  something.py
tests/environment/deathmatch/resources/test/: core.lua  meta.xml  tests.lua
tools/python/: requirements.txt  something.py
tools/python/mtasa/: core.py  element.py  event.py  exception.py
tools/resource-python/: config.lua  init.lua  meta.xml
